fixed responsive issues and overflow

--- a/app/globals.css
+++ b/app/globals.css
@@ -24,9 +24,8 @@ html {
 }
 
 body {
-  background: var(--background);
-  color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+  overflow-x: hidden;
 }
 
 .logo-holder {
